--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://111.230.181.212:3306/mydb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-
 #连接池配置
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
@@ -25,9 +24,14 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-
+#mybatis
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.type-aliases-package=com.house.jikezu.model
 mybatis.configuration.map-underscore-to-camel-case=true
-
+logging.level.com.house.jikezu.dao=debug
+#pagehelper
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
 server.port=8081
